# bff

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  build.sh  file_manager  resources.qrc
.github/workflows/: build-mac.yml  build.yml  cmake-build.yml  codeql.yml  security.yml
docs/: Guide.md
src/: controller.cpp  controller.h  icons.cpp  icons.h  main.cpp
